# cofre_pessoal

./: .gitignore  CMakeLists.txt  README.md  interface.glade  interface.glade~  main  main.c  meu_banco.db  meuapp  sql.sql  tela_login.glade  texet.text
.cache/clangd/index/: main.c.05C3E2BE2BB474F3.idx
banco/: sql.sql
banco_de_dados/: meu_banco.db
include/: app_state.h  banco_de_dados.h  criptografar.h  crypto.h  diretorio.h  funcoes_main.h  init.h  input.h  janela.h  login.h  teste.h
layout/: #interface.glade#  atua.glade  atualizar_dados.glade  atualizar_dados.glade~  estilo.css  interface.glade  interface.glade~  tela_login.glade  tela_login.glade~
sql/: main  main   main.c  meu_banco.db  sql.sql  teste 
src/: banco_de_dados.c  banco_de_dados.cpp  criptografia.c  crypto.cpp  diretorio.c  init.cpp  input.c  janela.c  login.c  main.c  main.cpp  teste.c
src/teste/: main.c  meu_banco.db  sql.sql  teste.c
teste/teset/: main  main.c
teste_criptografia/: CMakeLists.txt  main.c
